Fix umlaut may cause an error.

--- a/asset/bib/packages.bib
+++ b/asset/bib/packages.bib
@@ -57,7 +57,7 @@
 }
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
-  author = {Hadley Wickham and Romain Francois and Kirill Müller},
+  author = {Hadley Wickham and Romain Francois and Kirill M{\"u}ller},
   year = {2016},
   note = {R package version 1.2},
   url = {https://CRAN.R-project.org/package=tibble},
